--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,11 @@ h1 {
   top: -20px;
 }
 
+h6 {
+  position: relative;
+  top: -70px;
+}
+
 h3 {
   font-size: 36px;
   font-weight: 700;
@@ -72,7 +77,12 @@ li {
   text-transform: capitalize;
 }
 
+#search-input {
+  background-color: rgba(130, 166, 170, 0.406);
+  color: aliceblue;
+}
+
 .git-hub-link {
   text-decoration: none;
-  color: rgb(255, 200, 0);
+  color: rgba(26, 63, 67, 0.908);
 }
